# simple-rust-grpc

./: README.md
client/src/: main.rs
project/: Cargo.toml
project/proto/: payments.proto
