[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.7"


[[bin]]
name = "payment-gateway-server"
path="src/bin/payment-gateway-server.rs"

[[bin]]
name = "payment-gateway-client"
src = "src/bin/payment-gateway-client.rs"